# neft-processing

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  FULL  Makefile  PARTIAL  README.md  SECOND  admin_login.json  admin_tests.cmd  ai_tests.cmd  auth_tests.cmd  conftest.py  diag_v021.txt  docker-compose.dev.yml  docker-compose.smoke.yml  docker-compose.test.yml  docker-compose.yml  docs_client_logistics_not_found_report.md  find_auth_endpoints.py  index.html  inspect_neft_repo.py  neft_state.txt  pytest.ini  req.json  run_tests.cmd  selftest.cmd  sitecustomize.py  structure.txt  tree_to_file.cmd
platform/ai-services/risk-scorer/: Dockerfile  pyproject.toml  requirements.txt
platform/ai-services/risk-scorer/app/: main.py  model_provider.py  model_registry.py
platform/auth-host/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
platform/auth-host/app/: alembic_runtime.py  bootstrap.py  db.py  demo.py  healthcheck.py  main.py  metrics.py  settings.py  transactions.py  validators.py
platform/auth-host/app/adapters/: oauth_providers.py
platform/auth-host/app/alembic/: __init__.py  env.py  script.py.mako
platform/auth-host/app/cli/: __init__.py  reset_passwords.py
platform/auth-host/app/config/: base.py
platform/auth-host/app/lib/: core_api.py  idempotency.py
platform/auth-host/app/models/: sso.py  user.py
platform/auth-host/app/schemas/: admin_users.py  auth.py  sso.py  tx.py
platform/auth-host/app/scripts/: db_repair.py
platform/auth-host/app/security/: __init__.py  jwt.py  mfa.py
platform/auth-host/app/seeds/: __init__.py  demo_users.py
platform/auth-host/app/services/: keys.py  oidc.py
platform/auth-host/app/tests/: conftest.py  migration_helpers.py  test_admin_users_audit.py  test_admin_users_schema.py  test_admin_users_topology.py  test_alembic_runtime.py  test_auth.py  test_auth_integration.py  test_auth_me.py  test_bootstrap.py  test_bootstrap_unit.py  test_db_repair.py  test_demo_users_tenant_bootstrap.py  test_health.py  test_jwks.py  test_keys.py  test_login_portal_claims.py  test_login_portal_resolution.py  test_metrics.py  test_migrations_smoke.py  test_processing.py  test_rbac_contract.py  test_session_status_uuid_serialization.py  test_signup_flow.py  test_sso_oidc.py  test_sso_routes.py
platform/auth-host/scripts/: db_repair.sh
platform/billing-clearing/: Dockerfile  __init__.py  entrypoint.sh  pyproject.toml  requirements.txt
platform/billing-clearing/app/: beat.py  celery_app.py  job_evidence.py  main.py
platform/billing-clearing/app/config/: base.py  local.py
platform/billing-clearing/app/tasks/: __init__.py  ai.py  billing.py  clearing.py
platform/billing-clearing/app/tests/: conftest.py  test_beat_schedule.py  test_job_evidence_integration.py  test_tasks_smoke.py
platform/integration-hub/: Dockerfile  pyproject.toml  requirements.txt
platform/integration-hub/app/: celery_app.py  db.py  main.py  schemas.py  settings.py  storage.py  tasks.py
platform/integration-hub/app/models/: __init__.py  edo.py
platform/integration-hub/app/providers/: diadok.py  registry.py
platform/integration-hub/app/services/: edo_service.py
platform/integration-hub/app/tests/: test_edo_service.py
platform/integration-hub/neft_integration_hub/: celery_app.py  db.py  events.py  main.py  metrics.py  schemas.py  settings.py  storage.py  tasks.py
platform/integration-hub/neft_integration_hub/models/: __init__.py  edo.py  edo_stub.py  webhook_intake.py  webhooks.py
platform/integration-hub/neft_integration_hub/providers/: base.py  diadok.py  registry.py
platform/integration-hub/neft_integration_hub/services/: edo_service.py  edo_stub.py  webhook_intake.py  webhooks.py
platform/integration-hub/neft_integration_hub/tests/: _db.py  conftest.py  test_db_runtime.py  test_diadok_provider_registry.py  test_edo_internal_api.py  test_edo_service.py  test_edo_stub.py  test_notifications_send.py  test_notify_email_send.py  test_otp_send.py  test_settings_defaults.py  test_webhook_intake.py  test_webhooks.py
platform/logistics-service/: Dockerfile  pyproject.toml  requirements.txt
platform/logistics-service/app/: main.py  settings.py
platform/logistics-service/app/compute/: deviation.py  (+2 more)
platform/logistics-service/neft_logistics_service/: main.py  schemas.py  settings.py
platform/processing-core/: Dockerfile  README.md  alembic_helpers.py  entrypoint.sh  pyproject.toml  requirements.txt
platform/processing-core/app/: alembic.ini  alembic_helpers.py  celery_client.py  cli.py  db.py  error_handlers.py  event_worker.py  fastapi_utils.py  logging_conf.py  main.py  schemas.py  services.py
platform/processing-core/db/: base.py  schema.py  session.py  types.py
platform/processing-core/events/: publisher.py  schemas.json  subscribers.py  topics.md
platform/processing-core/models/: billing_reconciliation.py  financial_adjustment.py  invoice.py  operation.py
platform/processing-core/services/: clearing.py
services/core-api/: Dockerfile  README.md  conftest.py  entrypoint.sh  pyproject.toml  requirements.txt
services/core-api/app/: alembic.ini  celery_client.py  config.py  db.py  main.py  models.py  schemas.py
services/core-api/db/: __init__.py  session.py
shared/python/: README.md  __init__.py  pyproject.toml
shared/python/neft_shared/: __init__.py  logging_setup.py  settings.py
(+3985 files in other folders)
