[project]
name = "neft-auth-host"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.7.0",
  "python-jose[cryptography]==3.3.0",
  "httpx==0.27.2",
  "redis==5.0.7",
  "neft_shared @ file:../../shared/python"
]

[tool.pytest.ini_options]
testpaths = [
  "app/tests",
]
asyncio_default_fixture_loop_scope = "function"
