[project]
name = "neft-workers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "celery==5.4.0",
  "redis==5.0.7",
  "pydantic==2.9.2",
  "python-dotenv==1.0.1",
  "httpx==0.27.2",
  "neft_shared @ file:../../shared/python",
]

[tool.pytest.ini_options]
markers = [
  "integration: tests that exercise local integration wiring or external task evidence",
]
