[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neft-integration-hub"
version = "0.1.0"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.0",
    "sqlalchemy==2.0.30",
    "celery==5.4.0",
    "redis==5.0.4",
    "boto3==1.34.115",
    "prometheus-client==0.20.0",
    "pydantic==2.7.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neft_integration_hub*"]
