[project]
name = "neft-core-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.7.0",
  "celery==5.4.0",
  "SQLAlchemy==2.0.32",
  "psycopg[binary]==3.2.1",
  "alembic==1.13.2",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "redis==5.0.7",
  "boto3==1.35.58",
  "reportlab==4.2.5",
  "httpx==0.27.2",
  "paramiko==3.5.0",
  "neft_shared @ file:../../shared/python",
  "ruff==0.6.9",
  "pytest==8.3.3",
  "schemathesis==3.38.4",
  "jsonschema==4.23.0"
]
