[project]
name = "neft-core-api"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = [
  "app/tests"
]
norecursedirs = [
  ".git",
  ".venv",
  "node_modules",
  "platform/ai-services",
  "platform/shared",
  "platform/*/app/tests"
]
markers = [
  "unit",
  "integration",
  "smoke",
  "contracts",
  "contracts_api",
  "contracts_events",
]
