[project]
name = "neft-ai-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "python-dotenv==1.0.1",
  "requests==2.32.3",
  "httpx==0.27.2",
  "neft_shared @ file:../../shared/python"
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Please use `import python_multipart` instead\\.:PendingDeprecationWarning:starlette\\.formparsers",
  "ignore:jsonschema\\.exceptions\\.RefResolutionError is deprecated.*:DeprecationWarning:schemathesis\\.generation\\.coverage",
]
